Add Java bindings and publish to Maven Central (#47)
* docs: add java bindings design spec for issue #25

* docs: add java bindings implementation plan

* feat(java): scaffold Gradle module for Java bindings

* feat(java): add TashkeelException error hierarchy

* feat(java): add JNA bindings and the Tashkeel diacritization API

* docs: document the Java bindings in the root README

* ci: publish Java bindings to Maven Central on release tags

* fix(java): add CI test job, document ExternError visibility, harden tests

* build(java): switch Maven Central publishing to JReleaser, mirror dengjen-tts tooling

Replace com.vanniktech.maven.publish with maven-publish + org.jreleaser,
matching ZirekHQ/dengjen-tts's proven Java publish pipeline: maven-publish
stages the jar/sources/javadoc/POM into build/staging-deploy, JReleaser
signs and uploads that staged repo to Central Portal via jreleaserDeploy.
CI runs deploy-only (not jreleaserFullRelease) since GitHub releases are
already handled by the existing cargo-dist release.yml on the same tag.

Also mirrors dengjen-tts's general Gradle tooling: wrapper bumped to
9.7.1, plugin/library versions moved into gradle/libs.versions.toml, and
the foojay-resolver-convention plugin added for toolchain provisioning.
Java toolchain baseline stays 17 (dengjen-tts uses 25) to preserve this
module's own compatibility decision.

Renames the Maven artifactId from dengjen-tashkeel-java to
dengjen-tashkeel via an explicit publication override.

Required GitHub secrets are renamed to JReleaser's convention:
JRELEASER_MAVENCENTRAL_USERNAME/PASSWORD and
JRELEASER_GPG_PASSPHRASE/SECRET_KEY/PUBLIC_KEY, superseding
MAVEN_CENTRAL_USERNAME/PASSWORD and GPG_PRIVATE_KEY/PASSPHRASE.

* build(java): rename Gradle project name to dengjen-tashkeel

Drop the -java suffix from rootProject.name to match the published
Maven artifactId, which was already dengjen-tashkeel. Cosmetic only --
changes the Gradle display name and local build/libs/ jar filenames,
not a